--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(LISPCompiler)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(LISPCompiler main.cpp)
+add_executable(LISPCompiler src/main.cpp
+        src/parser.cpp
+        src/tokenizer.cpp)
