--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(LISPCompiler src/main.cpp
         src/parser.cpp
-        src/tokenizer.cpp)
+        src/tokenizer.cpp
+        include/codegen.hpp)
