wokring machine code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,12 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(LISPCompiler src/main.cpp
         src/parser.cpp
         src/tokenizer.cpp
-        include/codegen.hpp
+        include/ir_codegen.hpp
         src/preproc.cpp
         include/preproc.hpp
-        src/codegen.cpp)
-        # include/asmgen.hpp
-        # src/asmgen.cpp
-        # src/asmgen.cpp
-        # src/asmgen.cpp
-        # include/asmgen.hpp)
+        src/ir_codegen.cpp
+        include/asmgen.hpp
+        src/asmgen.cpp
+        src/asmgen.cpp
+        src/asmgen.cpp
+        include/asmgen.hpp)
